tests/baselines/reference/functionCall16.errors.txt
==== tests/cases/compiler/functionCall16.ts (6 errors) ====
    function foo(a:string, b?:string, ...c:number[]){}
    foo('foo', 1); 
    ~~~
!!! functionCall16.ts(2,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 2 which is of type 'number'.
    ~~~
!!! functionCall16.ts(2,1): error TS2087: Could not select overload for 'call' expression.
    foo('foo'); 
    foo('foo', 'bar'); 
    foo();
    ~~~
!!! functionCall16.ts(5,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! functionCall16.ts(5,1): error TS2087: Could not select overload for 'call' expression.
    foo(1, 'bar');
    ~~~
!!! functionCall16.ts(6,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! functionCall16.ts(6,1): error TS2087: Could not select overload for 'call' expression.
    foo('foo', 'bar', 3);
    